# intra-chat

./: .git_push_format.md  .gitignore  README.md  docker-compose.yml  env  main.py  pyproject.toml
src/: app.py  config.py  llm_client.py
src/auth/: dependencies.py  router.py  schemas.py  service.py  utils.py
src/common/: logger.py  schemas.py
src/core_llm/: llm.py  llm_service.py  logger.py  router.py  schemas.py  utils.py
src/crawler/: logger.py  router.py  schemas.py  service.py
src/crawler/fetcher/: __init__.py  logger.py  ustv.py  utils.py
src/db/: logger.py  models.py  session.py
src/model/: llm.py  router.py  schemas.py
src/rag/: embedder.py  ingestor.py  logger.py  qdrant.py  qdrant_setup.py  retriever.py
