[project]
name = "intra-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "coloredlogs>=15.0.1",
    "fastapi>=0.115.14",
    "ollama>=0.5.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn>=0.34.3",
]
