[project]
name = "intra-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "coloredlogs>=15.0.1",
    "fastapi[all]>=0.115.14",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "ollama>=0.5.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.7",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.14.3",
    "sqlalchemy[asyncio]>=2.0.41",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.3",
]
